$Id$
Version 1.1.3+CVS (?? ??? 2006)
 - Fixed bug [ 1711983 ] cannot switch between registers of system settings
 - Fixed bug [ 1714844 ] Small patch for includes/styles.php + includes/js/popups.php
 - Applied PATCH [ 1710686 ] Version 1.0.5 uses javascript functions undefined in IE6
 - Applied PATCH [1060051 ] Add hover effect for week number links
 - Applied PATCH [ 1659949 ] MyCalendar Link not including .php suffix
 - Applied PATCH [ 1669552 ] Themes are not all listed in drop-down
 - Applied PATCH [ 1697119 ] popups.php - fix for IE popups falling of screen.
 - Instead of 'removing' translations identical to English, replace them with
   an equal sign "=".  Cuts down on <<MISSING>> by update_translation.pl and
   still saves a lot of file space.
 - Fully populate translations[] with default English text
   before loading other language files.
 - Begin support for new language - JRR Tolkien's "Elven". :)
   See the comment notes in the file for where to get the fonts.
 - Removed several more phrases from translations/*.txt files that are the same
   in English.  Between these last two 'removals', overall file size is 100+K smaller.
 - Removed "ob_start()" from help_docs.php so it would output.
   Removed several phrases from translations/*.txt files that are the same in
   English - cutting overall file size considerably.
 - Fixed bug [ 1663286 ] pop-up window of categories are not dynamic
 - Fixed bug [ 1663292 ] date-pop-up --> mini calendar should be increased the size
 - Fixed bug [ 1671714 ] right bracket is displayed for untimed events at day.php
 - Fixed bug [ 1663269 ] untimed events and tasks not proper displayed at day.php
 - Fixed bug [ 1663341 ] first square in the time-matrix not proper visible for BG-
 - Fixed bug [ 1673806 ] Premature end of script headers
 - Fixed bug [ 1660278 ] Fatal Error: Invalid data format forid
 - Fixed logic error: $translations_loaded was being set = true before it actually was.